<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/all_recipes_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/title_all_recipes_text_view"
...
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/search_recipes_search_bar"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/all_recipes_cell_layout"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/go_to_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="bottom|start"
        app:fabCustomSize="60dp"
...
